--- a/descubri.html
+++ b/descubri.html
@@ -128,8 +128,8 @@
                 <div class="col s4">
                     <div class="card hoverable">
                         <div class="card-image">
-                            <a href="hotel.html"><img class="responsive-img" src="img/dormitorio1.png"></a>
-                            <span class="card-title">AMERIAN PARK</span>
+                            <a href="hotel.html"><img class="responsive-img" src="img/dormitorio1.png">
+                            <span class="card-title center-align">Amerian Park</span></a>
                         </div>
                     </div>
                 </div>
@@ -137,8 +137,8 @@
                 <div class="col s4">
                     <div class="card hoverable">
                         <div class="card-image">
-                            <a href="hotel.html"><img class="responsive-img" src="img/dormitorio2.png"></a>
-                            <span class="card-title">YRIGOYEN 111</span>
+                            <a href="hotel.html"><img class="responsive-img" src="img/dormitorio2.png">
+                            <span class="card-title center-align">Yrigoyen 111</span></a>
                         </div>
                     </div>
                 </div>
@@ -146,8 +146,8 @@
                 <div class="col s4">
                     <div class="card hoverable">
                         <div class="card-image">
-                            <a href="hotel.html"><img class="responsive-img" src="img/dormitorio3.png"></a>
-                            <span class="card-title">CASEROS 248</span>
+                            <a href="hotel.html"><img class="responsive-img" src="img/dormitorio3.png">
+                            <span class="card-title center-align">Caseros 248</span></a>
                         </div>
                     </div>
                 </div>
@@ -166,7 +166,7 @@
                     <div class="card hoverable">
                         <div class="card-image">
                             <img class="responsive-img" src="img/actividad1.png">
-                            <span class="card-title">LOS GIGANTES</span>
+                            <span class="card-title center-align">Los Gigantes</span>
                         </div>
                     </div>
                 </div>
@@ -175,7 +175,7 @@
                     <div class="card hoverable">
                         <div class="card-image">
                             <img class="responsive-img" src="img/actividad2.png">
-                            <span class="card-title">TÚNELES TANINGA</span>
+                            <span class="card-title center-align">Túneles Taninga</span>
                         </div>
                     </div>
                 </div>
@@ -184,7 +184,7 @@
                     <div class="card hoverable">
                         <div class="card-image">
                             <img class="responsive-img" src="img/actividad3.png">
-                            <span class="card-title">PUEBLO ESCONDIDO</span>
+                            <span class="card-title center-align">Pueblo Escondido</span>
                         </div>
                     </div>
                 </div>
@@ -204,7 +204,7 @@
                     <div class="card hoverable">
                         <div class="card-image">
                             <img class="responsive-img" src="img/restaurante1.png">
-                            <span class="card-title">CIENTOVOLANDO</span>
+                            <span class="card-title center-align">Cientovolando</span>
                         </div>
                     </div>
                 </div>
@@ -213,7 +213,7 @@
                     <div class="card hoverable">
                         <div class="card-image">
                             <img class="responsive-img" src="img/restaurante2.png">
-                            <span class="card-title">PIZZA ITALIA</span>
+                            <span class="card-title center-align">Pizza Italia</span>
                         </div>
                     </div>
                 </div>
@@ -222,7 +222,7 @@
                     <div class="card hoverable">
                         <div class="card-image">
                             <img class="responsive-img" src="img/restaurante3.png">
-                            <span class="card-title">DIRAN</span>
+                            <span class="card-title center-align">Diran</span>
                         </div>
                     </div>
                 </div>
