--- a/guias.html
+++ b/guias.html
@@ -29,7 +29,7 @@
           <a href="home.html" class="logotipo brand-logo center"><img src="img/logotipo.png"/></a>
           <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons"> menu </i></a>
           <ul class="right hide-on-med-and-down">
-            <li><a class="flow-text" href="guias.html"> Guías </a></li>
+            <li><a class="flow-text active" href="guias.html"> Guías </a></li>
             <li><a class="flow-text" href="planificador.html"> Planificador </a></li>
             <li><a class="flow-text" href="tienda.html"> Tienda </a></li>
           </ul>
@@ -72,7 +72,7 @@
         <div class="container center-align">
           
           <div class="row">
-            <div class="col s12 m4 10"><h1 class="flow-text section center-align">RECOMENDADOS</h1></div>
+            <div class="col s12 m4 10"><h1 class="flow-text section center-align brown-text">RECOMENDADOS</h1></div>
             <div class="col s12 m4 l8"><div class="divider"></div></div>
           </div>
 
@@ -80,32 +80,32 @@
                 <div class="col s3 m3">
                   <div class="card z-depth-2 hoverable">
                     <div class="card-image">
-                        <a href="descubri.html"><img class="responsive-img" src="img/destino1.jpg"></a>
-                        <span class="card-title center-align">Cordoba</span>
+                        <a href="descubri.html"><img class="responsive-img" src="img/destino1.jpg">
+                        <span class="card-title center-align">Cordoba</span></a>
                     </div>
                   </div>
                 </div>
                 <div class="col s3 m3">
                   <div class="card z-depth-2 hoverable">
                     <div class="card-image">
-                        <a href="descubri.html"><img class="responsive-img" src="img/destino2.jpg"></a>
-                        <span class="card-title">Misiones</span>
+                        <a href="descubri.html"><img class="responsive-img" src="img/destino2.jpg">
+                        <span class="card-title">Misiones</span></a>
                     </div>
                   </div>
                 </div>
                 <div class="col s3 m3">
                   <div class="card z-depth-2 hoverable">
                     <div class="card-image">
-                        <a href="descubri.html"><img class="responsive-img" src="img/destino3.jpg"></a>
-                        <span class="card-title">Catamarca</span>
+                        <a href="descubri.html"><img class="responsive-img" src="img/destino3.jpg">
+                        <span class="card-title">Catamarca</span></a>
                     </div>
                   </div>
                 </div>
                 <div class="col s3 m3">
                   <div class="card z-depth-2 hoverable">
                     <div class="card-image">
-                        <a href="descubri.html"><img class="responsive-img" src="img/destino4.jpg"></a>
-                        <span class="card-title">Bariloche</span>
+                        <a href="descubri.html"><img class="responsive-img" src="img/destino4.jpg">
+                        <span class="card-title">Bariloche</span></a>
                     </div>
                   </div>
                 </div>
@@ -117,7 +117,7 @@
         <div class="container center-align">
 
           <div class="row">
-            <div class="col s12 m4 10"><h1 class="flow-text section center-align">POPULARES</h1></div>
+            <div class="col s12 m4 10"><h1 class="flow-text section center-align brown-text">POPULARES</h1></div>
             <div class="col s12 m4 l8"><div class="divider"></div></div>
           </div>
 
@@ -125,32 +125,32 @@
               <div class="col s3 m3">
                 <div class="card z-depth-2 hoverable">
                   <div class="card-image">
-                      <a href="descubri.html"><img class="responsive-img" src="img/destino1.jpg"></a>
-                      <span class="card-title center-align">Cordoba</span>
+                      <a href="descubri.html"><img class="responsive-img" src="img/destino1.jpg">
+                      <span class="card-title center-align">Cordoba</span></a>
                   </div>
                 </div>
               </div>
               <div class="col s3 m3">
                 <div class="card z-depth-2 hoverable">
                   <div class="card-image">
-                      <a href="descubri.html"><img class="responsive-img" src="img/destino2.jpg"></a>
-                      <span class="card-title">Misiones</span>
+                      <a href="descubri.html"><img class="responsive-img" src="img/destino2.jpg">
+                      <span class="card-title">Misiones</span></a>
                   </div>
                 </div>
               </div>
               <div class="col s3 m3">
                 <div class="card z-depth-2 hoverable">
                   <div class="card-image">
-                      <a href="descubri.html"><img class="responsive-img" src="img/destino3.jpg"></a>
-                      <span class="card-title">Catamarca</span>
+                      <a href="descubri.html"><img class="responsive-img" src="img/destino3.jpg">
+                      <span class="card-title">Catamarca</span></a>
                   </div>
                 </div>
               </div>
               <div class="col s3 m3">
                 <div class="card z-depth-2 hoverable">
                   <div class="card-image">
-                      <a href="descubri.html"><img class="responsive-img" src="img/destino4.jpg"></a>
-                      <span class="card-title">Bariloche</span>
+                      <a href="descubri.html"><img class="responsive-img" src="img/destino4.jpg">
+                      <span class="card-title">Bariloche</span></a>
                   </div>
                 </div>
               </div>
@@ -162,7 +162,7 @@
         <div class="container center-align">
 
           <div class="row">
-            <div class="col s12 m4 10"><h1 class="flow-text section center-align">PROVINCIAS</h1></div>
+            <div class="col s12 m4 10"><h1 class="flow-text section center-align brown-text">PROVINCIAS</h1></div>
             <div class="col s12 m4 l8"><div class="divider"></div></div>
           </div>
         
@@ -170,32 +170,32 @@
             <div class="col s3 m3">
               <div class="card z-depth-2 hoverable">
                 <div class="card-image">
-                    <a href="descubri.html"><img class="responsive-img" src="img/destino1.jpg"></a>
-                    <span class="card-title center-align">Cordoba</span>
+                    <a href="descubri.html"><img class="responsive-img" src="img/destino1.jpg">
+                    <span class="card-title center-align">Cordoba</span></a>
                 </div>
               </div>
             </div>
             <div class="col s3 m3">
               <div class="card z-depth-2 hoverable">
                 <div class="card-image">
-                    <a href="descubri.html"><img class="responsive-img" src="img/destino2.jpg"></a>
-                    <span class="card-title">Misiones</span>
+                    <a href="descubri.html"><img class="responsive-img" src="img/destino2.jpg">
+                    <span class="card-title">Misiones</span></a>
                 </div>
               </div>
             </div>
             <div class="col s3 m3">
               <div class="card z-depth-2 hoverable">
                 <div class="card-image">
-                    <a href="descubri.html"><img class="responsive-img" src="img/destino3.jpg"></a>
-                    <span class="card-title">Catamarca</span>
+                    <a href="descubri.html"><img class="responsive-img" src="img/destino3.jpg">
+                    <span class="card-title">Catamarca</span></a>
                 </div>
               </div>
             </div>
             <div class="col s3 m3">
               <div class="card z-depth-2 hoverable">
                 <div class="card-image">
-                    <a href="descubri.html"><img class="responsive-img" src="img/destino4.jpg"></a>
-                    <span class="card-title">Bariloche</span>
+                    <a href="descubri.html"><img class="responsive-img" src="img/destino4.jpg">
+                    <span class="card-title">Bariloche</span></a>
                 </div>
               </div>
             </div>
@@ -205,32 +205,32 @@
           <div class="col s3 m3">
             <div class="card z-depth-2 hoverable">
               <div class="card-image">
-                  <a href="descubri.html"><img class="responsive-img" src="img/destino1.jpg"></a>
-                  <span class="card-title center-align">Cordoba</span>
+                  <a href="descubri.html"><img class="responsive-img" src="img/destino1.jpg">
+                  <span class="card-title center-align">Cordoba</span></a>
               </div>
             </div>
           </div>
           <div class="col s3 m3">
             <div class="card z-depth-2 hoverable">
               <div class="card-image">
-                  <a href="descubri.html"><img class="responsive-img" src="img/destino2.jpg"></a>
-                  <span class="card-title">Misiones</span>
+                  <a href="descubri.html"><img class="responsive-img" src="img/destino2.jpg">
+                  <span class="card-title">Misiones</span></a>
               </div>
             </div>
           </div>
           <div class="col s3 m3">
             <div class="card z-depth-2 hoverable">
               <div class="card-image">
-                  <a href="descubri.html"><img class="responsive-img" src="img/destino3.jpg"></a>
-                  <span class="card-title">Catamarca</span>
+                  <a href="descubri.html"><img class="responsive-img" src="img/destino3.jpg">
+                  <span class="card-title">Catamarca</span></a>
               </div>
             </div>
           </div>
           <div class="col s3 m3">
             <div class="card z-depth-2 hoverable">
               <div class="card-image">
-                  <a href="descubri.html"><img class="responsive-img" src="img/destino4.jpg"></a>
-                  <span class="card-title">Bariloche</span>
+                  <a href="descubri.html"><img class="responsive-img" src="img/destino4.jpg">
+                  <span class="card-title">Bariloche</span></a>
               </div>
             </div>
           </div>
