--- a/home.html
+++ b/home.html
@@ -83,7 +83,7 @@
           </div>
           <div class="center-align">
             <h2 class="flow-text">Nuestras</h2>
-            <h1 class="flow-text">GUÍAS TURÍSTICAS</h1>
+            <h1 class="flow-text brown-text">GUÍAS TURÍSTICAS</h1>
             <p class ="flow-text">
               Toda la información necesaria para <br> disfrutar tu viaje al máximo.
             </p>
@@ -97,7 +97,7 @@
             </a>
             <div class="center-align">
               <h2 class="flow-text">Nuestro</h2>
-              <h1 class="flow-text">PLANIFICADOR</h1>
+              <h1 class="flow-text brown-text">PLANIFICADOR</h1>
               <p class="flow-text">
                 Todo lo que necesitas para mantenerte <br> organizado en tus viajes.
               </p>
