--- a/tienda.html
+++ b/tienda.html
@@ -31,107 +31,157 @@
       <ul class="right hide-on-med-and-down">
         <li><a class="flow-text" href="guias.html"> Guías </a></li>
         <li><a class="flow-text" href="planificador.html"> Planificador </a></li>
-        <li><a class="flow-text" href="tienda.html"> Tienda </a></li>
+        <li><a class="flow-text active" href="tienda.html"> Tienda </a></li>
       </ul>
     </div>
   </nav>
 
-  <div class="container transparent">
-    <div class="row">
-      <ul class="shop-nav">
-        <li><a class="flow-text brown-text col s3" href="tienda.html">Starter Kits</a></li>
-        <li><a class="flow-text brown-text col s3" href="tienda.html"><strong>Mochilas</strong></a></li>
-        <li><a class="flow-text brown-text col s3" href="tienda.html">Dispositivos</a></li>
-        <li><a class="flow-text brown-text col s3" href="tienda.html">Indumentaria</a></li>
-      </ul>
-    </div>
-  </div>
-
-  <div class="home-body section container">
-    <div class="row">
-      <div class="col s4 m3 hoverable product">
-        <div class="shop-icon">
-          <a class="btn-floating btn-large waves-effect waves-light #a1887f brown z-depth-3"><i
-              class="material-icons">add_shopping_cart</i></a>
+  <nav class="nav-extended z-depth-0 transparent">
+    <div class="nav-content">
+      <div class="row container">
+        <div class="col s10 m3 divider"></div>
+          <div class="col s14 m6"> 
+          <ul class="tabs tabs-transparent">
+            <li class="tab"><a href="#test1">Starter Kits</a></li>
+            <li class="tab"><a class="active" href="#test2">Mochilas</a></li>
+            <li class="tab"><a href="#test3">Dispositivos</a></li>
+            <li class="tab"><a href="#test4">Indumentaria</a></li>
+          </ul>
         </div>
-        <img class="responsive-img" src="img/mochila4.png" alt="mochila" />
-        <div class="botonCompras"><a class="waves-effect waves-light btn" href="tienda.html"> Mochila Rave - $40.00</a>
+        <div class="col s10 m3 divider"></div>
+      </div>
+    </div>
+  </nav>
+
+
+  <div class="tienda-body section container">
+    <div class="row">
+
+      <div class="col s4 m3">
+        <div class=" producto hoverable">
+  
+          <div class="shop-icon">
+            <a class="btn-floating btn-large waves-effect waves-light #a1887f z-depth-3"><i
+                class="material-icons">add_shopping_cart</i></a>
+          </div>
+          <img class="responsive-img" src="img/mochila1.png" alt="mochila" />
+          <div class="botonCompras">
+            <a class="waves-effect waves-light btn" href="tienda.html"> Kathmandu 38L - 45.000$</a>
+          </div>
+  
         </div>
       </div>
 
-      <div class="col s4 m3 hoverable product">
+    <div class="col s4 m3">
+      <div class=" producto hoverable">
+
         <div class="shop-icon">
           <a class="btn-floating btn-large waves-effect waves-light #a1887f brown z-depth-3"><i
               class="material-icons">add_shopping_cart</i></a>
         </div>
         <img class="responsive-img" src="img/mochila2.png" alt="mochila" />
-        <div class="botonCompras"><a class="waves-effect waves-light btn" href="tienda.html"> Mochila Urbana - $45.00</a>
+        <div class="botonCompras">
+          <a class="waves-effect waves-light btn" href="tienda.html"> Patagonia 32L - $20.000</a>
         </div>
-      </div>
 
-      <div class="col s4 m3 hoverable product">
+      </div>
+    </div>
+
+    <div class="col s4 m3">
+      <div class=" producto hoverable">
+
         <div class="shop-icon">
           <a class="btn-floating btn-large waves-effect waves-light #a1887f brown z-depth-3"><i
               class="material-icons">add_shopping_cart</i></a>
         </div>
-        <img class="responsive-img" src="img/mochila6.png" alt="mochila" />
-        <div class="botonCompras"><a class="waves-effect waves-light btn" href="tienda.html"> Mochila hero - $50.00</a>
+        <img class="responsive-img" src="img/mochila3.png" alt="mochila" />
+        <div class="botonCompras">
+          <a class="waves-effect waves-light btn" href="tienda.html"> Caribee 65L - $60.000</a>
         </div>
+
+      </div>
+    </div>
+
+  <div class="col s4 m3">
+    <div class=" producto hoverable">
+
+      <div class="shop-icon">
+        <a class="btn-floating btn-large waves-effect waves-light #a1887f brown z-depth-3"><i
+            class="material-icons">add_shopping_cart</i></a>
+      </div>
+      <img class="responsive-img" src="img/mochila4.png" alt="mochila" />
+      <div class="botonCompras">
+        <a class="waves-effect waves-light btn" href="tienda.html"> Nomatic 20L - $10.000</a>
       </div>
 
-      <div class="col s4 m3 hoverable product">
-        <div class="shop-icon">
-          <a class="btn-floating btn-large waves-effect waves-light #a1887f brown z-depth-3"><i
-              class="material-icons">add_shopping_cart</i></a>
-        </div>
-        <img class="responsive-img" src="img/mochila6.png" alt="mochila" />
-        <div class="botonCompras"><a class="waves-effect waves-light btn" href="tienda.html"> Mochila hero - $35.00</a>
-        </div>
-      </div>
+    </div>
+  </div>
+
     </div>
 
     <div class="row">
-      <div class="col s4 m3 hoverable product">
-        <div class="shop-icon">
-          <a class="btn-floating btn-large waves-effect waves-light #a1887f brown z-depth-3"><i
-              class="material-icons">add_shopping_cart</i></a>
-        </div>
-        <img class="responsive-img" src="img/mochila1.png" alt="mochila" />
-        <div class="botonCompras"><a class="waves-effect waves-light btn" href="tienda.html"> Mochila Campus - $40.00</a>
+
+      <div class="col s4 m3">
+        <div class=" producto hoverable">
+  
+          <div class="shop-icon">
+            <a class="btn-floating btn-large waves-effect waves-light #a1887f brown z-depth-3"><i
+                class="material-icons">add_shopping_cart</i></a>
+          </div>
+          <img class="responsive-img" src="img/mochila3.png" alt="mochila" />
+          <div class="botonCompras">
+            <a class="waves-effect waves-light btn" href="tienda.html"> Caribee 55L - $55.000</a>
+          </div>
+  
         </div>
       </div>
 
-      <div class="col s4 m3 hoverable product">
-        <div class="shop-icon">
-          <a class="btn-floating btn-large waves-effect waves-light #a1887f brown z-depth-3"><i
-              class="material-icons">add_shopping_cart</i></a>
-        </div>
-        <img class="responsive-img" src="img/mochila5.png" alt="mochila" />
-        <div class="botonCompras"><a class="waves-effect waves-light btn" href="tienda.html"> Mochila Fly - $45.00</a>
-        </div>
-      </div>
+    <div class="col s4 m3">
+      <div class=" producto hoverable">
 
-      <div class="col s4  m3 hoverable product">
         <div class="shop-icon">
           <a class="btn-floating btn-large waves-effect waves-light #a1887f brown z-depth-3"><i
               class="material-icons">add_shopping_cart</i></a>
         </div>
-        <img class="responsive-img" src="img/mochila3.png" alt="mochila" />
-        <div class="botonCompras"><a class="waves-effect waves-light btn" href="tienda.html"> Mochila Vancou - $50.00</a>
+        <img class="responsive-img" src="img/mochila6.png" alt="mochila" />
+        <div class="botonCompras">
+          <a class="waves-effect waves-light btn" href="tienda.html"> Nomatic 20L - 28.000$</a>
         </div>
-      </div>
 
-      <div class="col s4  m3 hoverable product">
-        <div class="shop-icon">
-          <a class="btn-floating btn-large waves-effect waves-light #a1887f brown z-depth-3"><i
-              class="material-icons">add_shopping_cart</i></a>
-        </div>
-        <img class="responsive-img" src="img/mochila3.png" alt="mochila" />
-        <div class="botonCompras"><a class="waves-effect waves-light btn" href="tienda.html"> Mochila Vancou - $20.00</a>
-        </div>
       </div>
     </div>
+
+  <div class="col s4 m3">
+    <div class=" producto hoverable">
+
+      <div class="shop-icon">
+        <a class="btn-floating btn-large waves-effect waves-light #a1887f brown z-depth-3"><i
+            class="material-icons">add_shopping_cart</i></a>
+      </div>
+      <img class="responsive-img" src="img/mochila1.png" alt="mochila" />
+      <div class="botonCompras">
+        <a class="waves-effect waves-light btn" href="tienda.html"> Kathmandu 30L - 38.000$</a>
+      </div>
+
+    </div>
   </div>
+
+    <div class="col s4 m3">
+      <div class=" producto hoverable">
+
+        <div class="shop-icon">
+          <a class="btn-floating btn-large waves-effect waves-light #a1887f brown z-depth-3"><i
+              class="material-icons">add_shopping_cart</i></a>
+        </div>
+        <img class="responsive-img" src="img/mochila2.png" alt="mochila" />
+        <div class="botonCompras">
+          <a class="waves-effect waves-light btn" href="tienda.html"> Patagonia 32L - $20.000</a>
+        </div>
+
+      </div>
+    </div>
+  </div>  
+</div>
 
   <!-- Footer -->
   <div class="container">
