--- a/descubri.html
+++ b/descubri.html
@@ -103,7 +103,7 @@
                 <label for="nombre">Nombre</label>
                 <input type="text">
                 <div class="row hoverable padding">
-                    <a href="plafinicador.html">
+                    <a href="planificador.html">
                     <i class="medium material-icons brown-text col s1" style="width: 65px; border-radius: 5px;">add</i>
                     <p class="col s10">Crear viaje personalizado</p>
                     </a>
