--- a/guias.html
+++ b/guias.html
@@ -77,38 +77,42 @@
           </div>
 
             <div class="row center-align">
-                <div class="col s3 m3">
-                  <div class="card z-depth-2 hoverable">
-                    <div class="card-image">
-                        <a href="descubri.html"><img class="responsive-img" src="img/destino1.jpg">
-                        <span class="card-title center-align">Cordoba</span></a>
-                    </div>
+              <div class="col s3 m3">
+                <div class="card z-depth-2 hoverable">
+                  <div class="card-image">
+                      <a href="descubri.html"><img class="responsive-img" src="img/destino4.jpg">
+                      <span class="card-title">Bariloche</span></a>
                   </div>
                 </div>
+              </div>
+
+              <div class="col s3 m3">
+                <div class="card z-depth-2 hoverable">
+                  <div class="card-image">
+                      <a href="descubri.html"><img class="responsive-img" src="img/destino5.jpg">
+                      <span class="card-title">Carlos Paz</span></a>
+                  </div>
+                </div>
+              </div>
+
                 <div class="col s3 m3">
                   <div class="card z-depth-2 hoverable">
                     <div class="card-image">
                         <a href="descubri.html"><img class="responsive-img" src="img/destino2.jpg">
-                        <span class="card-title">Misiones</span></a>
+                        <span class="card-title">Iguazú</span></a>
                     </div>
                   </div>
                 </div>
+
                 <div class="col s3 m3">
                   <div class="card z-depth-2 hoverable">
                     <div class="card-image">
-                        <a href="descubri.html"><img class="responsive-img" src="img/destino3.jpg">
-                        <span class="card-title">Catamarca</span></a>
+                        <a href="descubri.html"><img class="responsive-img" src="img/destino6.jpg">
+                        <span class="card-title center-align">Usuahia</span></a>
                     </div>
                   </div>
                 </div>
-                <div class="col s3 m3">
-                  <div class="card z-depth-2 hoverable">
-                    <div class="card-image">
-                        <a href="descubri.html"><img class="responsive-img" src="img/destino4.jpg">
-                        <span class="card-title">Bariloche</span></a>
-                    </div>
-                  </div>
-                </div>
+
             </div>
         </div>
     </div>
@@ -170,16 +174,8 @@
             <div class="col s3 m3">
               <div class="card z-depth-2 hoverable">
                 <div class="card-image">
-                    <a href="descubri.html"><img class="responsive-img" src="img/destino1.jpg">
-                    <span class="card-title center-align">Cordoba</span></a>
-                </div>
-              </div>
-            </div>
-            <div class="col s3 m3">
-              <div class="card z-depth-2 hoverable">
-                <div class="card-image">
-                    <a href="descubri.html"><img class="responsive-img" src="img/destino2.jpg">
-                    <span class="card-title">Misiones</span></a>
+                    <a href="descubri.html"><img class="responsive-img" src="img/destino7.jpg">
+                    <span class="card-title center-align">Buenos Aires</span></a>
                 </div>
               </div>
             </div>
@@ -194,8 +190,16 @@
             <div class="col s3 m3">
               <div class="card z-depth-2 hoverable">
                 <div class="card-image">
-                    <a href="descubri.html"><img class="responsive-img" src="img/destino4.jpg">
-                    <span class="card-title">Bariloche</span></a>
+                    <a href="descubri.html"><img class="responsive-img" src="img/destino8.jpg">
+                    <span class="card-title">Chubut</span></a>
+                </div>
+              </div>
+            </div>
+            <div class="col s3 m3">
+              <div class="card z-depth-2 hoverable">
+                <div class="card-image">
+                    <a href="descubri.html"><img class="responsive-img" src="img/destino9.jpg">
+                    <span class="card-title">Córdoba</span></a>
                 </div>
               </div>
             </div>
@@ -205,15 +209,23 @@
           <div class="col s3 m3">
             <div class="card z-depth-2 hoverable">
               <div class="card-image">
-                  <a href="descubri.html"><img class="responsive-img" src="img/destino1.jpg">
-                  <span class="card-title center-align">Cordoba</span></a>
+                  <a href="descubri.html"><img class="responsive-img" src="img/destino10.jpg">
+                  <span class="card-title center-align">Jujuy</span></a>
               </div>
             </div>
           </div>
           <div class="col s3 m3">
             <div class="card z-depth-2 hoverable">
               <div class="card-image">
-                  <a href="descubri.html"><img class="responsive-img" src="img/destino2.jpg">
+                  <a href="descubri.html"><img class="responsive-img" src="img/destino11.jpg">
+                  <span class="card-title">Mendoza</span></a>
+              </div>
+            </div>
+          </div>
+          <div class="col s3 m3">
+            <div class="card z-depth-2 hoverable">
+              <div class="card-image">
+                  <a href="descubri.html"><img class="responsive-img" src="img/destino12.jpg">
                   <span class="card-title">Misiones</span></a>
               </div>
             </div>
@@ -221,16 +233,8 @@
           <div class="col s3 m3">
             <div class="card z-depth-2 hoverable">
               <div class="card-image">
-                  <a href="descubri.html"><img class="responsive-img" src="img/destino3.jpg">
-                  <span class="card-title">Catamarca</span></a>
-              </div>
-            </div>
-          </div>
-          <div class="col s3 m3">
-            <div class="card z-depth-2 hoverable">
-              <div class="card-image">
-                  <a href="descubri.html"><img class="responsive-img" src="img/destino4.jpg">
-                  <span class="card-title">Bariloche</span></a>
+                  <a href="descubri.html"><img class="responsive-img" src="img/destino13.jpg">
+                  <span class="card-title">Rio Negro</span></a>
               </div>
             </div>
           </div>
