--- a/descubri.html
+++ b/descubri.html
@@ -243,7 +243,7 @@
                 <div class="socials">
                 <ul>
                   <a href="#!">Nosotros</a>
-                  <a href="#!">Contacto</a>
+                  <a href="contacto.html">Contacto</a>
                 </ul>
                   <a class="waves-effect waves-light btn-floating social black hoverable">
                   <i class="fa fa-facebook"></i> Sign in with facebook</a>
