--- a/guias.html
+++ b/guias.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <link type="text/css" rel="stylesheet" href="css/materialize.min.css" media="screen,projection"/>
-    <link rel="stylesheet" href="css/headerfooter.css"/>
+	  <link rel="stylesheet" href="css/headerfooter.css"/>
     <link rel="stylesheet" href="css/guias.css"/>
     <link rel="stylesheet" href="css/materialize-social.css"/>
     <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.css" 
@@ -15,6 +14,7 @@
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
     <!--Import materialize.css-->
+    <link type="text/css" rel="stylesheet" href="css/materialize.min.css" media="screen,projection"/>
     <link href="https://fonts.cdnfonts.com/css/verdana-pro-cond" rel="stylesheet"/>
     <link href="https://fonts.cdnfonts.com/css/century-gothic" rel="stylesheet"/>
     <!--Let browser know website is optimized for mobile-->
@@ -23,24 +23,26 @@
 
   <body>
 
+    <!-- Header -->
     <nav class="header hoverable">
-        <div class="container nav-wrapper">
-          <a href="home.html" class="isotipo brand-logo"><img src="img/isotipo.png"/></a>
-          <a href="home.html" class="logotipo brand-logo center"><img src="img/logotipo.png"/></a>
-          <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons"> menu </i></a>
-          <ul class="right hide-on-med-and-down">
-            <li><a class="flow-text active" href="guias.html"> Guías </a></li>
-            <li><a class="flow-text" href="planificador.html"> Planificador </a></li>
-            <li><a class="flow-text" href="tienda.html"> Tienda </a></li>
-          </ul>
-        </div>
-    </nav> 
-  
-    <ul class="sidenav" id="mobile-demo">
-      <li><a href="descubri.html"> Guías </a></li>
-      <li><a href="planificador.html"> Planificador </a></li>
-      <li><a href="tienda.html"> Tienda </a></li>
-    </ul>
+      <div class="container nav-wrapper ">
+        <a href="home.html" class="isotipo brand-logo"><img src="img/isotipo.png"/></a>
+        <a href="home.html" class="logotipo brand-logo center"><img src="img/logotipo.png"/></a>
+        <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons"> menu </i></a>
+        <ul class="right hide-on-med-and-down">
+          <li><a class="flow-text active" href="guias.html"> Guías </a></li>
+          <li><a class="flow-text" href="planificador.html"> Planificador </a></li>
+          <li><a class="flow-text" href="tienda.html"> Tienda </a></li>
+        </ul>
+      </div>
+  </nav> 
+
+  <!-- Header sidebar -->
+  <ul class="sidenav" id="mobile-demo">
+    <li><a href="descubri.html"> Guías </a></li>
+    <li><a href="planificador.html"> Planificador </a></li>
+    <li><a href="tienda.html"> Tienda </a></li>
+  </ul>
 
 
 
@@ -268,7 +270,7 @@
               <div class="socials">
               <ul>
                 <a href="#!">Nosotros</a>
-                <a href="#!">Contacto</a>
+                <a href="contacto.html">Contacto</a>
               </ul>
                 <a class="waves-effect waves-light btn-floating social black hoverable">
                 <i class="fa fa-facebook"></i> Sign in with facebook</a>
