--- a/planificador.html
+++ b/planificador.html
@@ -12,7 +12,7 @@
     <link rel="icon" href="img/isotipo.png"/>
     <title>Cam'On</title>
     <!--Import Google Icon Font-->
-
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
     <!--Import materialize.css-->
     <link type="text/css" rel="stylesheet" href="css/materialize.min.css" media="screen,projection"/>
     <link href="https://fonts.cdnfonts.com/css/verdana-pro-cond" rel="stylesheet"/>
@@ -110,19 +110,16 @@
                     </iframe>
                 </div>
             </div>
-
-
         </div>
-        
     </div>
 
 
     
     <!-- Footer -->
-    <div class="container">
+   <div class="container">
       <div class="divider"> 
       </div>
-    </div>
+    </div> 
     <footer class="page-footer orange lighten-5">
       <div class="container footer">
         <div class="row">
@@ -133,7 +130,7 @@
             <div class="socials">
             <ul>
               <a href="#!">Nosotros</a>
-              <a href="#!">Contacto</a>
+              <a href="contacto.html">Contacto</a>
             </ul>
               <a class="waves-effect waves-light btn-floating social black hoverable">
               <i class="fa fa-facebook"></i> Sign in with facebook</a>
