--- a/tienda.html
+++ b/tienda.html
@@ -25,8 +25,8 @@
 <body>
   <nav class="header hoverable row">
     <div class="container nav-wrapper">
-      <a href="home.html" class="isotipo brand-logo"><img src="img/isotipo.png" /></a>
-      <a href="home.html" class="logotipo brand-logo center"><img src="img/logotipo.png" /></a>
+      <a href="index.html" class="isotipo brand-logo"><img src="img/isotipo.png" /></a>
+      <a href="index.html" class="logotipo brand-logo center"><img src="img/logotipo.png" /></a>
       <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons"> menu </i></a>
       <ul class="right hide-on-med-and-down">
         <li><a class="flow-text" href="guias.html"> Guías </a></li>
@@ -191,12 +191,12 @@
     <div class="container footer">
       <div class="row">
         <div class="col l6 s12">
-          <a href="#!"><img class="logotipofooter" src="img/logotipo.png" /></a>
+          <a href="index.html"><img class="logotipofooter" src="img/logotipo.png" /></a>
         </div>
         <div class="col l4 offset-l2 s12 right-align">
           <div class="socials">
             <ul>
-              <a href="#!">Nosotros</a>
+              <a href="nosotros.html">Nosotros</a>
               <a href="contacto.html">Contacto</a>
             </ul>
             <a class="waves-effect waves-light btn-floating social black hoverable">
