--- a/guias.html
+++ b/guias.html
@@ -48,11 +48,20 @@
 
 
     <div class="container buscador center-align">
-        <h1 class="flow-text">DESTINOS</h1>
+      
+        <div class="row textodestinos">
+            <div class="divider col s12 m5 "></div>
+            <div class="col s10 m2">
+              <h1 class="flow-text center-align">
+                DESTINOS
+            </h1>     
+          </div>
+            <div class="divider col s12 m5 "></div>
+          </div>
 
         <div class="container select"> 
           <div class="row">
-            <div class="col s12 m4"></div>
+            <div class=" col s12 m4"></div>
             <div class="col s10 m4">          <div class="input-field">
               <select >
                 <option value="" disabled selected><i class="fa fa-facebook left-align" title="Facebook"></i>¿Donde querés ir?</option>
