--- a/contacto.html
+++ b/contacto.html
@@ -45,22 +45,19 @@
           <li><a href="tienda.html"> Tienda </a></li>
         </ul>
 
-
+        <div class="container">
+        <div class="row textonosotros">
+          <div class="divider col s12 m5 "></div>
+          <div class="col s10 m2">
+            <h1 class="flow-text center-align">
+              CONTACTO
+          </h1>     
+        </div>
+          <div class="divider col s12 m5 "></div>
+        </div>
+      </div>
 
     <div class="container contacto" id="">
-
-
-   
- 
-          <div class="row">
-            <div class="divider col s12 m4 "></div>
-            <div class="col s10 m4">
-              <h1 class="flow-text center-align">
-                CONTACTO
-            </h1>     
-          </div>
-            <div class="divider col s12 m4 "></div>
-          </div>
 
 
 
