--- a/nosotros.html
+++ b/nosotros.html
@@ -69,7 +69,7 @@
               </a>
             </div>
             <div class="center-align">
-              <h1 class="flow-text">EQUIPO</h1>
+              <h1 class="flow-text brown-text">EQUIPO</h1>
               <p class ="flow-text">
                 Somos un grupo apasionado de nómadas digitales con años de experiencia
                 facilitando herramientas para esta comunidad.
@@ -82,7 +82,7 @@
                 <img class="responsive-img z-depth-2" src="img/tecnologia.jpg" alt="Planificador" />
               </a>
               <div class="center-align">
-                <h1 class="flow-text">TECNOLOGIA</h1>
+                <h1 class="flow-text brown-text">TECNOLOGIA</h1>
                 <p class="flow-text">
                     La información de las guías turísticas fue recopilada de bases
                     de datos de aplicaciones web de turismo y mapas utilizando
